--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   <body>
     <p><a href="/acf.html">Account Collection Flow</a></p>
     <p><a href="/pf.html">Payment Flow</a></p>
+    <p><a href="/onboarding.html">User Onboarding</a></p>
   </body>
 </html>
